--- a/metadoc-js/src/main/resources/index.scss
+++ b/metadoc-js/src/main/resources/index.scss
@@ -12,44 +12,39 @@
   font-style: normal;
 }
 
-html, body {
+body {
   margin: 0;
   width: 100%;
   height: 100%;
   font-family: 'Roboto';
+  overflow: hidden;
 }
 
-header {
-  background-color: #002b36;
-  color: white;
-  height: 40px;
-  padding: 10px 10px;
+.metadoc-menu {
+  line-height: 24px;
+  padding-right: 0;
 
-  #title {
-    line-height: 40px;
-    font-size: 16px;
-    padding-left: 50px;
+  .logo {
+    color: transparent;
     background-image: url('images/favicon.png');
     background-repeat: no-repeat;
     background-size: contain;
-    display: block;
-    font-weight: bold;
   }
 }
 
-main {
-  // FIXME:
-  position: relative;
-  min-height: 90vh;
+.metadoc-drawer-header .mdc-temporary-drawer__header-content {
+  background-image: url('images/favicon.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.mdc-list-group__subheader {
+  padding: 8px 16px 0;
 }
 
 #editor {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	margin: 0;
+  min-height: 100vh;
+  margin: 0;
 	padding: 0;
 	overflow: hidden;
 }
